--- a/main.html
+++ b/main.html
@@ -1,45 +1,97 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Grofers Checkout</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+      }
 
-<html>
+      h1 {
+        text-align: center;
+      }
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+      table {
+        width: 50%;
+        margin: 0 auto;
+        border-collapse: collapse;
+      }
 
-<body>
-    <!-- the entire body must be written by student -->
-    <table style="width: 100%">
-    <caption>
-      Monthly savings
-    </caption>
-    <tr>
-      <th>Item</th>
-      <th>Prices in Rs</th>
-    </tr>
-    <tr>
-      <td class="item">Tea</td>
-      <td class="price">50</td>
-    </tr>
-    <tr>
-      <td class="item">Coffee</td>
-      <td class="price">70</td>
-    </tr>
-    <tr>
-      <td class="item">Biscuits</td>
-      <td class="price">100</td>
-    </tr>
-    <tr>
-      <td class="item">Rice</td>
-      <td class="price">130</td>
-    </tr>
-    <tr>
-      <td class="item">Milk</td>
-      <td class="price">50</td>
-    </tr>
-  </table>
-    <script type="text/javascript" src="./script.js">
-</script>
+      th,
+      td {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: left;
+      }
 
-</body>
+      th {
+        background-color: #f4f4f4;
+      }
 
+      button {
+        display: block;
+        margin: 20px auto;
+        padding: 10px 20px;
+        font-size: 16px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Grocery List</h1>
+
+    <table id="groceryTable">
+      <thead>
+        <tr>
+          <th>Item</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="item">
+          <td>Apple</td>
+          <td class="prices">20</td>
+        </tr>
+        <tr class="item">
+          <td>Banana</td>
+          <td class="prices">10</td>
+        </tr>
+        <tr class="item">
+          <td>Milk</td>
+          <td class="prices">50</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <button onclick="calculateTotal()">Calculate Total</button>
+
+    <script>
+      function calculateTotal() {
+        // Get all price elements from the table
+        const priceElements = document.querySelectorAll(".prices");
+
+        let total = 0;
+
+        // Sum up the prices
+        priceElements.forEach((priceElement) => {
+          total += parseFloat(priceElement.textContent);
+        });
+
+        // Create a new row for the total
+        const table = document.getElementById("groceryTable");
+        const totalRow = document.createElement("tr");
+
+        // Create a single cell to display the total price
+        const totalCell = document.createElement("td");
+        totalCell.colSpan = 2; // This spans across two columns
+        totalCell.textContent = `Total Price: ₹${total}`;
+
+        // Add the new cell to the row and append the row to the table
+        totalRow.appendChild(totalCell);
+        table.appendChild(totalRow);
+      }
+    </script>
+  </body>
 </html>
